# fcp-ocr

./: .gitignore  README.md  pyproject.toml
src/fcp_ocr/: cli.py  detect_text.py  place_markers.py
tests/: presets
tests/fcp_ocr/: test___init__.py  test_cli.py  test_detect_text.py  test_place_markers.py
