[project]
name = "fcp-ocr"
version = "0.0.2"
authors = [
  { name="Sugil Steve Lee", email="sugilmath@gmail.com" },
]
description = "Read FCPXML, detect text (OCR), place Markers in FCPXML"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fcp-io>=0.0.2",
	"fcp-math>=0.0.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/leesugil/fcp-ocr"
Issues = "https://github.com/leesugil/fcp-ocr/issues"

[project.scripts]
fcp-ocr = "fcp_ocr.cli:main"
